data on elements

--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
 <head>
     <title>Practice Data Attribute</title>
     <link rel="stylesheet" href="index.css">
-    <script src="./data.js"></script>
+    <script src="data.js" type="module"></script>
 </head>
 
 <body>
     <h1>Shopping List</h1>
     <form>
-        <input type="text" placeholder="Name" id="name" />
+        <input type="text" placeholder="Name" id="name"/>
         <select id="type">
             <option value="drinks">Drinks</option>
             <option value="bakery">Bakery</option>
